<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Zero Waste</string>
    <string name="addpic">Choose from Gallary</string>
    <string name="aftcleaning">After Cleaning</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bf4cleaning">Before Cleaning</string>
    <string name="bio">Bio</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="click">Click</string>
    <string name="clr_pic">Clear All</string>
    <string name="clr_pic1">Clear Before Cleaning</string>
    <string name="clr_pic2">Clear After Cleaning</string>
    <string name="coverpic">Cover Pic</string>
    <string name="createcc">Create Account</string>
    <string name="dustbnid">Dustbin ID :</string>
    <string name="email">Email</string>
    <string name="error_icon_content_description">Error</string>
    <string name="example_mail">name@abc.com</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fname">Full Name</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="google_maps_key">AIzaSyCnq1St4BxcfB-tu9U0mNqcL0iHIH7-rNo</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="item_view_role_description">Tab</string>
    <string name="location">Location</string>
    <string name="login">Login</string>
    <string name="loginfacebook">Login with Facebook</string>
    <string name="logingoogle">Login with Google</string>
    <string name="logo">Logo</string>
    <string name="material_slider_range_end">Range end,</string>
    <string name="material_slider_range_start">Range start,</string>
    <string name="mobile_no">Mobile Number</string>

    <string name="name">Name</string>
    <string name="nav_app_bar_navigate_up_description">Navigate up</string>
    <string name="nav_app_bar_open_drawer_description">Open navigation drawer</string>
    <string name="new_user">New User? Register Now</string>
    <string name="newpic">Take a photo</string>
    <string name="next">Next</string>
    <string name="npeg">000</string>
    <string name="password">Password</string>
    <string name="password_example">password</string>
    <string name="profile">Profile</string>
    <string name="profilepic">Profile Pic</string>
    <string name="removepic">Remove current picture.</string>
    <string name="search_menu_title">Search</string>
    <string name="signfacebook">Sign in with Facebook</string>
    <string name="signgoogle">Sign in with Google</string>
    <string name="signtologin">Already have a account?Login</string>
    <string name="space_scrolling_view_behavior">com.luseen.spacenavigation.SpaceNavigationViewBehavior</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="submit">Submit</string>
    <string name="task">Task</string>
    <string name="title_activity_maps">Map</string>
    <string name="working">Element to be added</string>
    <string name="Or">Or</string>
    <string name="navigation_drawer_open">navd open</string>
    <string name="navigation_drawer_close">nacd close</string>
    <string name="help">Help &amp; Feature</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="tracking">Tracking</string>
    <string name="message">Message</string>
    <string name="home">Home</string>
    <string name="hello">Hello,</string>

    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thr">Thr</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="numberexample">21</string>

    <string name="completed_task">Completed Tasks</string>
    <string name="remaning_task">Remaning Task</string>
    <string name="total_task">Total Task</string>
    <string name="track">Track</string>
    <string name="arr_min">Track the Bins</string>
    <string name="quote">Dont call the world \n dirty because you\n forgot to clean your glasses.</string>
    <string name="textview">txttt</string>
    <string name="tsk">Task</string>
    <string name="o">0</string>
    <string name="add_Bin">Add bin</string>
    <string name="lat">Lat</string>
    <string name="col">:</string>
    <string name="lon">Lon</string>
    <string name="current_loc">Curr_Loc</string>
    <string name="rem_task">Remaning Task</string>
    <string name="com_task">Completed task</string>
    <string name="bin">Bin</string>


    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title">Android Tutorials Hub</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="save">Save</string>
    <string name="title_activity_maps2">Map</string>
</resources>