<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/email"
            android:title="@string/message" />
        <item
            android:id="@+id/nav_task"
            android:icon="@drawable/task"
            android:title="@string/task" />

        <item
            android:id="@+id/nav_tracking"
            android:icon="@drawable/location"
            android:title="@string/tracking" />

    </group>
    <item android:title="Others">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/settings"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_Help"
                android:icon="@drawable/help"
                android:title="@string/help" />
            <item
                android:id="@+id/nav_about"
                android:title="@string/about"
                android:icon="@drawable/about"/>
        </menu>
    </item>
</menu>