<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="250dp"
    android:layout_gravity="center"
    android:background="#FFFFFF"
    android:padding="25dp">

    <Button
        android:id="@+id/clearpic"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:background="@android:color/transparent"
        android:onClick="remove_prof"
        android:text="@string/removepic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/newpic"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:background="@android:color/transparent"
        android:onClick="askCameraPermission"
        android:text="@string/newpic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clearpic" />

    <Button
        android:id="@+id/addpic"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:background="@android:color/transparent"
        android:onClick="OpenGallary"
        android:text="@string/addpic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newpic" />

</androidx.constraintlayout.widget.ConstraintLayout>